--- a/temperature/pom.xml
+++ b/temperature/pom.xml
@@ -15,6 +15,7 @@
     <description>Temperature measures</description>
     <properties>
         <java.version>1.8</java.version>
+        <cxf.version>3.3.2</cxf.version>
     </properties>
     <dependencies>
         <dependency>
@@ -27,6 +28,25 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-spring-boot-starter-jaxws</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.cxf</groupId>
+            <artifactId>cxf-rt-features-logging</artifactId>
+            <version>${cxf.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
