--- a/measures/src/main/resources/application.properties
+++ b/measures/src/main/resources/application.properties
@@ -6,3 +6,8 @@ endpoints.enabled = true
 endpoints.health.enabled = true
 camel.dataformat.json-xstream.pretty-print=true
 camel.dataformat.json-jackson.auto-discover-object-mapper=true
+measures.kafka.server=localhost:9092
+measures.service.type=all
+measures.power.server=localhost:8081
+measures.temperature.server=localhost:8080
+measures.mongo.server=localhost:27017
